Updated updatefile path to github repo.